Added qrcode router to enable QR code visualization on the browser
